Adding auxiliary notebook

--- a/auxiliary/MIMIC_preproc.ipynb
+++ b/auxiliary/MIMIC_preproc.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bd97d146",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6419f34c",
    "metadata": {},
    "outputs": [],
@@ -83,18 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1ef0408f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 46520/46520 [00:31<00:00, 1493.63it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seed(2021)\n",
     "## Augment patient DOBs\n",
@@ -164,25 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8a38da68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 26927/26927 [00:31<00:00, 865.58it/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Small input table saved, number of columns:  13, number of rows: 11040\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seed(2021)\n",
     "# Generate small input data file\n",
@@ -225,161 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9b3e7400",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SUBJECT_ID</th>\n",
-       "      <th>ETHNICITY</th>\n",
-       "      <th>ADMITTIME</th>\n",
-       "      <th>DISCHTIME</th>\n",
-       "      <th>DISCHARGE_LOCATION</th>\n",
-       "      <th>GENDER</th>\n",
-       "      <th>DOB</th>\n",
-       "      <th>FIRST_CAREUNIT</th>\n",
-       "      <th>CHARTTIME</th>\n",
-       "      <th>VALUE</th>\n",
-       "      <th>VALUEUOM</th>\n",
-       "      <th>LABEL</th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>23</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>2004-07-07</td>\n",
-       "      <td>2004-08-16</td>\n",
-       "      <td>HOME HEALTH CARE</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1974-07-17</td>\n",
-       "      <td>SICU</td>\n",
-       "      <td>2004-07-10 08:33:40</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>mmHg</td>\n",
-       "      <td>Non Invasive Blood Pressure diastolic</td>\n",
-       "      <td>47.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>23</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>1998-10-18</td>\n",
-       "      <td>1998-11-02</td>\n",
-       "      <td>HOME HEALTH CARE</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1974-07-17</td>\n",
-       "      <td>SICU</td>\n",
-       "      <td>1998-10-18 11:43:14</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>mmHg</td>\n",
-       "      <td>Non Invasive Blood Pressure diastolic</td>\n",
-       "      <td>47.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>34</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>1997-04-12</td>\n",
-       "      <td>1997-05-12</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1962-07-18</td>\n",
-       "      <td>CCU</td>\n",
-       "      <td>1997-04-13 18:17:38</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>mmHg</td>\n",
-       "      <td>Non Invasive Blood Pressure diastolic</td>\n",
-       "      <td>59.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>34</td>\n",
-       "      <td>WHITE</td>\n",
-       "      <td>1980-03-31</td>\n",
-       "      <td>1980-04-20</td>\n",
-       "      <td>HOME HEALTH CARE</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1962-07-18</td>\n",
-       "      <td>CCU</td>\n",
-       "      <td>1980-03-31 20:17:11</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>mmHg</td>\n",
-       "      <td>Non Invasive Blood Pressure diastolic</td>\n",
-       "      <td>59.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>107</td>\n",
-       "      <td>HISPANIC OR LATINO</td>\n",
-       "      <td>1997-12-30</td>\n",
-       "      <td>1998-01-24</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1975-04-02</td>\n",
-       "      <td>MICU</td>\n",
-       "      <td>1997-12-30 15:45:56</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>mmHg</td>\n",
-       "      <td>Non Invasive Blood Pressure diastolic</td>\n",
-       "      <td>46.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   SUBJECT_ID           ETHNICITY  ADMITTIME  DISCHTIME DISCHARGE_LOCATION  \\\n",
-       "0          23               WHITE 2004-07-07 2004-08-16   HOME HEALTH CARE   \n",
-       "1          23               WHITE 1998-10-18 1998-11-02   HOME HEALTH CARE   \n",
-       "2          34               WHITE 1997-04-12 1997-05-12               HOME   \n",
-       "3          34               WHITE 1980-03-31 1980-04-20   HOME HEALTH CARE   \n",
-       "4         107  HISPANIC OR LATINO 1997-12-30 1998-01-24               HOME   \n",
-       "\n",
-       "  GENDER        DOB FIRST_CAREUNIT           CHARTTIME  VALUE VALUEUOM  \\\n",
-       "0      M 1974-07-17           SICU 2004-07-10 08:33:40   58.0     mmHg   \n",
-       "1      M 1974-07-17           SICU 1998-10-18 11:43:14   58.0     mmHg   \n",
-       "2      M 1962-07-18            CCU 1997-04-13 18:17:38   66.0     mmHg   \n",
-       "3      M 1962-07-18            CCU 1980-03-31 20:17:11   66.0     mmHg   \n",
-       "4      M 1975-04-02           MICU 1997-12-30 15:45:56   61.0     mmHg   \n",
-       "\n",
-       "                                   LABEL   age  \n",
-       "0  Non Invasive Blood Pressure diastolic  47.0  \n",
-       "1  Non Invasive Blood Pressure diastolic  47.0  \n",
-       "2  Non Invasive Blood Pressure diastolic  59.0  \n",
-       "3  Non Invasive Blood Pressure diastolic  59.0  \n",
-       "4  Non Invasive Blood Pressure diastolic  46.0  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mimic_table.head()\n"
+    "mimic_table.head()"
    ]
   },
   {
@@ -404,30 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "65ab26b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/fy/skyvcp4s3tj6z_xhj2sv7jf00000gn/T/ipykernel_42777/1106345372.py:36: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  patient_stays.drop_duplicates(inplace=True)\n",
-      "100%|██████████| 90891/90891 [01:14<00:00, 1222.72it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mid sized input table saved, number of columns:  13, number of rows: 81665\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seed(2021)\n",
     "# Generate mid-sized input file\n",
@@ -504,30 +312,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3feff799",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/fy/skyvcp4s3tj6z_xhj2sv7jf00000gn/T/ipykernel_42777/2970102133.py:36: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  patient_stays.drop_duplicates(inplace=True)\n",
-      "100%|██████████| 241438/241438 [02:52<00:00, 1398.56it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Large input table saved, number of columns:  13, number of rows: 217068\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seed(2021)\n",
     "# Generate large-sized input file\n",
