--- a/auxiliary/generate_SUPPORT.ipynb
+++ b/auxiliary/generate_SUPPORT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../data/support.csv', index=False)"
+    "df.to_csv(\"../data/support.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's make a simpler SUPPORT dataset too, without the changes above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = support.read_df()\n",
+    "df.to_csv(\"../data/support_pycox.csv\", index=False)"
    ]
   },
   {
@@ -145,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
