Edit MWE notebook to view constraint graph

--- a/auxiliary/mwe.ipynb
+++ b/auxiliary/mwe.ipynb
@@ -11,25 +11,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first load in the required parts of the `NHSSynth` package and other packages that we will use in this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from nhssynth.modules.dataloader.metatransformer import MetaTransformer\n",
+    "from nhssynth.modules.dataloader.metadata import MetaData\n",
     "from nhssynth.modules.model.models import DPVAE\n",
     "import pandas as pd"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/support.csv\")\n",
-    "mt = MetaTransformer.from_path(df, \"../data/support_metadata.yaml\")\n",
-    "tdf = mt.apply()"
+    "We then load in our dataset and instantiate the `MetaTransformer`:"
    ]
   },
   {
@@ -38,7 +42,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = DPVAE(tdf, mt)\n",
+    "df = pd.read_csv(\"../data/support.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md = MetaData.from_path(df, \"../data/support_metadata.yaml\")\n",
+    "mt = MetaTransformer(df, md)\n",
+    "# Note that we could skip loading in the metadata the above two lines in one line:\n",
+    "# mt = MetaTransformer.from_path(df, \"../data/support_metadata.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We may want to observe the constraints as they are applied by the `MetaTransformer`, this can be done using the `gravis` package:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gravis as gv\n",
+    "\n",
+    "gv.d3(mt.metadata.constraints.minimal_graph)\n",
+    "# or gv.d3(mt.metadata.constraints.graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformed_df = mt.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = DPVAE(transformed_df, mt)\n",
     "model.train()"
    ]
   },
@@ -69,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
