Slightly extend MWE notebook

--- a/auxiliary/mwe.ipynb
+++ b/auxiliary/mwe.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/support.csv\")"
+    "dataset = pd.read_csv(\"../data/support.csv\")"
    ]
   },
   {
@@ -51,10 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "md = MetaData.from_path(df, \"../data/support_metadata.yaml\")\n",
-    "mt = MetaTransformer(df, md)\n",
+    "md = MetaData.from_path(dataset, \"../data/support_metadata.yaml\")\n",
+    "mt = MetaTransformer(dataset, md)\n",
     "# Note that we could skip loading in the metadata the above two lines in one line:\n",
-    "# mt = MetaTransformer.from_path(df, \"../data/support_metadata.yaml\")"
+    "# mt = MetaTransformer.from_path(dataset, \"../data/support_metadata.yaml\")"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformed_df = mt.apply()"
+    "transformed_dataset = mt.apply()"
    ]
   },
   {
@@ -91,8 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = DPVAE(transformed_df, mt)\n",
-    "model.train()"
+    "model = DPVAE(transformed_dataset, mt)\n",
+    "model.train(tracked_metrics=[])"
    ]
   },
   {
@@ -101,8 +101,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdf = model.generate()\n",
-    "sdf.describe()"
+    "synthetic_dataset = model.generate()\n",
+    "synthetic_dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mt.typed_dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "synthetic_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mt.typed_dataset.head()"
    ]
   }
  ],
