Update column comparisons notebook

--- a/auxiliary/col_comparisons.ipynb
+++ b/auxiliary/col_comparisons.ipynb
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "model = DPVAE(transformed_dataset, mt)\n",
-    "model.train(tracked_metrics=[])"
+    "model.train(displayed_metrics=[])"
    ]
   },
   {
