--- a/auxiliary/mwe.ipynb
+++ b/auxiliary/mwe.ipynb
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "model = DPVAE(transformed_dataset, mt)\n",
-    "model.train(tracked_metrics=[])"
+    "model.train(displayed_metrics=[])"
    ]
   },
   {
