Add multi-modal column to custom SUPPORT dataset

--- a/auxiliary/generate_SUPPORT.ipynb
+++ b/auxiliary/generate_SUPPORT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +67,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also want to create a new column consisting of a multi-modal Gaussian."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Create a column sampled from a multi-modal gaussian distribution with means 1.0, 50.0 and 100.0 and stds 1.0, 2.0 and 3.0\n",
+    "means = [1.0, 50.0, 100.0]\n",
+    "stds = [1.0, 2.0, 3.0]\n",
+    "df[\"x14\"] = np.concatenate([np.random.normal(means[i], stds[i], size=1) for i in np.random.randint(0, 3, df.shape[0])])"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -120,6 +149,13 @@
    "source": [
     "df.to_csv(\"../data/support.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -138,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
