Apply black formatting to notebooks

--- a/auxiliary/generate_SUPPORT.ipynb
+++ b/auxiliary/generate_SUPPORT.ipynb
@@ -44,8 +44,8 @@
    "outputs": [],
    "source": [
     "ref_date = datetime(2023, 1, 1)\n",
-    "df['x0'] = ref_date - pd.to_timedelta(df['x0'] * 365.2425, unit='D')\n",
-    "df = df.rename(columns={'x0': 'dob'})"
+    "df[\"x0\"] = ref_date - pd.to_timedelta(df[\"x0\"] * 365.2425, unit=\"D\")\n",
+    "df = df.rename(columns={\"x0\": \"dob\"})"
    ]
   },
   {
@@ -62,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_map = {x: chr(65 + int(x)) for x in df['x3'].unique().tolist()}\n",
-    "df['x3'] = df['x3'].map(_map)"
+    "_map = {x: chr(65 + int(x)) for x in df[\"x3\"].unique().tolist()}\n",
+    "df[\"x3\"] = df[\"x3\"].map(_map)"
    ]
   },
   {
@@ -88,7 +88,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Create a column sampled from a multi-modal gaussian distribution with means 1.0, 50.0 and 100.0 and stds 1.0, 2.0 and 3.0\n",
     "means = [1.0, 50.0, 100.0]\n",
     "stds = [1.0, 2.0, 3.0]\n",
