Add further pre-commit hooks to match

--- a/auxiliary/col_comparisons.ipynb
+++ b/auxiliary/col_comparisons.ipynb
@@ -23,11 +23,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nhssynth.modules.dataloader.metatransformer import MetaTransformer\n",
-    "from nhssynth.modules.dataloader.metadata import MetaData\n",
-    "from nhssynth.modules.model.models import DPVAE, VAE\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pandas import DataFrame\n",
+    "\n",
+    "from nhssynth.modules.dataloader.metadata import MetaData\n",
+    "from nhssynth.modules.dataloader.metatransformer import MetaTransformer\n",
+    "from nhssynth.modules.model.models import DPVAE, VAE"
    ]
   },
   {
@@ -175,8 +177,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
