--- a/auxiliary/mwe.ipynb
+++ b/auxiliary/mwe.ipynb
@@ -23,10 +23,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nhssynth.modules.dataloader.metatransformer import MetaTransformer\n",
+    "import pandas as pd\n",
+    "\n",
     "from nhssynth.modules.dataloader.metadata import MetaData\n",
-    "from nhssynth.modules.model.models import DPVAE\n",
-    "import pandas as pd"
+    "from nhssynth.modules.dataloader.metatransformer import MetaTransformer\n",
+    "from nhssynth.modules.model.models import DPVAE"
    ]
   },
   {
@@ -150,8 +151,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
