--- a/auxiliary/generate_SUPPORT.ipynb
+++ b/auxiliary/generate_SUPPORT.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
     "import numpy as np\n",
-    "from pycox.datasets import support\n",
-    "from datetime import datetime"
+    "import pandas as pd\n",
+    "from pycox.datasets import support"
    ]
   },
   {
@@ -174,8 +175,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
