--- a/auxiliary/col_comparisons.ipynb
+++ b/auxiliary/col_comparisons.ipynb
@@ -6,8 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "import gravis as gv\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "from nhssynth.modules.dataloader.metadata import MetaData\n",
+    "from nhssynth.modules.dataloader.metatransformer import MetaTransformer\n",
+    "from nhssynth.modules.model.models import DPVAE"
    ]
   },
   {
@@ -23,12 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "\n",
-    "from nhssynth.modules.dataloader.metadata import MetaData\n",
-    "from nhssynth.modules.dataloader.metatransformer import MetaTransformer\n",
-    "from nhssynth.modules.model.models import DPVAE, VAE"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -72,8 +73,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gravis as gv\n",
-    "\n",
     "gv.d3(mt.metadata.constraints.minimal_graph)\n",
     "# or gv.d3(mt.metadata.constraints.graph)"
    ]
@@ -175,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
