--- a/auxiliary/mwe.ipynb
+++ b/auxiliary/mwe.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gv.d3(mt.metadata.constraints.minimal_graph)\n",
+    "gv.d3(mt._metadata.constraints.minimal_graph)\n",
     "# or gv.d3(mt.metadata.constraints.graph)"
    ]
   },
@@ -92,7 +92,9 @@
    "outputs": [],
    "source": [
     "model = DPVAE(transformed_dataset, mt)\n",
-    "model.train(displayed_metrics=[])"
+    "\n",
+    "# Use notebook_run flag to avoid messy output from metric reporting during a run\n",
+    "stats = model.train(notebook_run=True)"
    ]
   },
   {
@@ -131,6 +133,13 @@
    "source": [
     "mt.typed_dataset.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -149,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
